# Athena

./: .gitignore  CMakeLists.txt  athena.code-workspace  premake5.lua
Engine/: Engine.lua
Engine/Shaders/: cubes.fs  cubes.vs  default.vs  texturedLit.fs  untexturedLit.fs
Engine/Source/: CMakeLists.txt  Engine.cpp  Engine.h  Input.cpp  Input.h  PreCompiledHeader.h
Engine/Source/AssetDatabase/: AssetDatabase.cpp  AssetDatabase.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Text.cpp  Text.h
Engine/Source/Core/: AABB.cpp  AABB.h  Base64.cpp  Base64.h  ErrorHandling.cpp  ErrorHandling.h  FileStream.cpp  FileStream.h  FileSystem.h  FileSystem_Win32.cpp  Json.cpp  Json.h  Log.cpp  Log.h  Maths.cpp  Maths.h  Matrix.h  Memory.h  Path.cpp  Path.h  Quat.cpp  Quat.h  Scanning.cpp  Scanning.h  TypeSystem.cpp  TypeSystem.h  Variant.cpp  Variant.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  Vsnprintf.cpp
Engine/Source/TypeSystem/: TypeData.cpp  TypeData.h  TypeDataPrimitives.cpp  TypeDataPrimitives.h  TypeDataStruct.cpp  TypeDataStruct.h  TypeDatabase.cpp  TypeDatabase.h  TypeSystem.cpp  TypeSystem.h  TypedPtr.cpp  TypedPtr.h
Game/: Game.lua
Game/Assets/: FirstTerrain.gltf  Spitfire.gltf
Game/Source/: CMakeLists.txt  Game.cpp  Game.h
